 * Fix not displaying current volume status after pressing mute key
 * Fix many effects not being correctly recorded by the video recorder
 * Fix quit menu showing incorrect keys if using non-default key bindings
 * Fix script translations not being loaded for Portuguese and Chinese
 * When using seduction, only show “CENSORED” text in English locale

Frontend:
 + Schemes are now stored in separate files under Schemes
 + Lead player to training missions when starting Hedgewars the first time
 * Fix broken preview of team hats (e.g. cap_team)

Content:
 + New scenarios: Bazooka Battlefield, Tentacle Terror
 + New basic training mission: Movement
 + Completely redo basic training missions: Bazooka, Grenade, Rope
 + Major overhaul of Sudden Death visuals in most themes
 + New flag: uk_scotland
 + New voice: Default_pl (Polish)
 + New voice: Russian_pl (Polish with a Russian accent)

Styles and game modes:
 + Various styles: Add current score/time next to team bars (where applicable)
 + Remove rubber duck from most weapon schemes and Random Weapon and Balanced Random Weapon
 + Construction Mode: Add a few shortcuts
 + Construction Mode: Show selected object at cursor and a crate preview icon
 + Construction Mode: Remember all selections
 + Construction Mode: Add subtle glow to healing station
 + Construction Mode: Allow to change "Switch Hedgehog" in weapon scheme
 + Construction Mode: Hide selected sub-modes from crate/object placer from enemies over the net
 + Continental supplies: Custom weapon icons for the special weapons
 + Racer, Tech Racer: Before starting a round, make first waypoint flash and center camera to it
 + Racer, Tech Racer: Various other waypoint appearance improvements
 + Racer: Use dark waypoints in bright themes like Bath
 + Racer, HedgeEditor: Show waypoint outline around cursor when placing waypoints
 + Battalion: Minor message and visual improvements
 + Battalion: Mutate hog hats by default, but not the names